[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Lights/light.png" type="Texture" id=1]
[ext_resource path="res://Assets/Plate/LightPlate.gd" type="Script" id=2]
[ext_resource path="res://Assets/Plate/pressure_platelight-2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Plate/pressure_platelight-3.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "pressed",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 160.0

[node name="LightPlate" type="Area2D" groups=[
"LightPlate",
]]
collision_layer = 8
script = ExtResource( 2 )

[node name="PlateSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "pressed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
texture_scale = 0.5
energy = 0.2
[connection signal="body_entered" from="." to="." method="_on_PressurePlate_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PressurePlate_body_exited"]
